--- a/WebApplication2/Views/Home/Carechimba.cshtml
+++ b/WebApplication2/Views/Home/Carechimba.cshtml
@@ -1,6 +1,6 @@
 ﻿<div>
-    <div class="titulo" onmouseover="carechimba()" onmouseout="outCare(this)">
-        <p id="titulo">Interaction Design</p>
+    <div class="titulo">
+        <p>Carechimb</p>
     </div>
     <div class="embed-responsive embed-responsive-16by9">
         <video class="embed-responsive-item" src="~/Content/video/proto.mp4" autoplay loop></video>
@@ -70,3 +70,5 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+
