--- a/WebApplication2/Views/Home/Contact.cshtml
+++ b/WebApplication2/Views/Home/Contact.cshtml
@@ -1,17 +1,58 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contacto";
 }
-<h2>@ViewBag.Title.</h2>
+<div>
+    <div class="subtitulo">
+        <p>Contacto</p>
+    </div>
+    <div>
+        <img src="~/Content/images/0.jpg" class="img-responsive">
+    </div>
+</div>
+
+
 <h3>@ViewBag.Message</h3>
 
+<br>
+
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Bogotá, Colombia<br /><br />
+    <abbr>Tel:</abbr>
+    (+57)3046333219
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+
+    <strong>E-Mail:</strong> <a href="mailto:zuk4ritass@gmail.com">zuk4ritass@gmail.com</a>
+    <br>
+    <br>
+
+    <strong>Mis Redes</strong>
+
+    <br>
+    <div class="navbar">
+        <ul class="redes">
+            <li class="icono">
+                <a href="https://www.facebook.com/manuel.acero.90" target="_blank">
+                    <img src="~/Content/images/face.png" style="width:30px;height:30px;border:0">
+                </a>
+            </li>
+            <li class="icono">
+                <a href="https://www.instagram.com/elchucarozukaro/" target="_blank">
+                    <img src="~/Content/images/inst.png" style="width:30px;height:30px;border:0">
+                </a>
+            </li>
+            <li class="icono">
+                <a href="https://www.behance.net/mracero1074a4" target="_blank">
+                    <img src="~/Content/images/beh.png" style="width:30px;height:30px;border:0">
+                </a>
+            </li>
+            <li class="icono">
+                <a href="https://www.linkedin.com/in/manuel-acero-8088b7113/" target="_blank">
+                    <img src="~/Content/images/in.png" style="width:30px;height:30px;border:0">
+                </a>
+            </li>
+        </ul>
+    </div>
 </address>
+
