--- a/WebApplication2/Views/Home/About.cshtml
+++ b/WebApplication2/Views/Home/About.cshtml
@@ -1,7 +1,36 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Acerca de";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div>
+    <div class="subtitulo">
+        <p>Acerca de mí</p>
+    </div>
+    <div>
+        <img src="~/Content/images/casas.jpg" class="img-responsive">
+    </div>
+</div>
 
-<p>Use this area to provide additional information.</p>
+<div class="container about">
+    <div class="row justify-content-md-center">
+        <div class="col col-lg-2">
+            <div class="imagen">
+                <img src="~/Content/images/yo.png" class="img-responsive">
+            </div>
+        </div>
+        <div class="col-md-auto">
+            <div class="texto">
+                <p class="text-sm-left">
+                    Hola!, soy Manuel Ricardo Acero Castillo. Soy Diseñador con opción en
+                    computación visual graduado de la Universidad de los Andes. Me apasiona la tecnología y como el uso
+                    de esta puede crear hilos de interacción entre los actores de un contexto y así mejorar la calidad de vida.
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
+
+
